syntax = "proto3";

package task;

service TaskService {
  rpc FindOne (TaskById) returns (Task) {}
  rpc GetAllTasks (TaskById) returns (Tasks) {}
  rpc CreateTask (CreateTaskStructure) returns (Task) {}
  rpc UpdateTaskStatus (StatusStructure) returns (Task) {}
  rpc DeleteTask (TaskById) returns (Tasks) {}

}

message TaskById {
  int32 id = 1;
}

message Task {
  int32 id = 1;
  string name = 2;
  string status = 3;
}

message Tasks {
  repeated Task items = 1;
}

message CreateTaskStructure {
  string name = 1 ;
}

message StatusStructure {
 int32 id = 1;
 string status = 2;
}

message NoArgs {}